--- a/index.html
+++ b/index.html
@@ -1326,12 +1326,12 @@ const AUTO_MOBILE = window.matchMedia("(max-width: 720px)").matches || /Mobi|And
    - GET via JSONP (no CORS)
    - POST via hidden form + iframe (no CORS)
 ================================ */
-const REMOTE_API_URL_RAW = "https://script.google.com/macros/s/AKfycby8M6TcvBdZ0abjO2Ct1QS0vC6X5PvS_R6Bctwj-MqBMcHUB8NB35I9KXfitoorKyk7_g/exec"; // <-- incolla qui l'URL /exec della Web App (Apps Script)
+const REMOTE_API_URL_RAW = "https://script.google.com/macros/s/AKfycbzqJXJxIL-qXUZ1S54p8iwVYOpqKmoWIWH4QyEknLO5tp0cgrUM1fJsR4pclEuNv6Tavg/exec"; // <-- incolla qui l'URL /exec della Web App (Apps Script)
 const REMOTE_API_URL = (REMOTE_API_URL_RAW || "").split('#')[0].split('?')[0]; // sicurezza: rimuove ?action=... se incollato per sbaglio
 const REMOTE_WRITE_KEY = ""; // opzionale: parola chiave anti-spam (se la imposti anche nello script)
 // Poll piu' frequente per vedere gli aggiornamenti degli altri utenti piu' rapidamente
 const REMOTE_POLL_MS = 8000;
-const CLIENT_VERSION = '3.0.3';
+const CLIENT_VERSION = '3.0.4';
 
 let uiMode = localStorage.getItem(UI_MODE_KEY) || (AUTO_MOBILE ? "mobile" : "desktop");
 let showChooser = true;
@@ -1643,18 +1643,23 @@ function defaultStatus(){
 function getSt(id){
   return statusStore[id] || defaultStatus();
 }
-function setSt(id, next){
-  // marca come "pending" per non perdere la modifica prima che il cloud la rifletta
+function setSt(id, next, opts){
+  // Su farmacie: per evitare conflitti "auto" (piu' scritture ravvicinate mentre modifichi),
+  // permettiamo aggiornamenti SOLO locali. Il salvataggio cloud avviene quando l'utente
+  // preme "Salva e chiudi" nel popup.
+  const noRemote = !!(opts && opts.noRemote);
+
   try{
     next.__localTs = Date.now();
-    next.__pending = !!REMOTE_API_URL;
-    next.__saveState = REMOTE_API_URL ? 'saving' : 'local';
+    next.__pending = (!noRemote) && !!REMOTE_API_URL;
+    next.__saveState = (!noRemote) ? (REMOTE_API_URL ? 'saving' : 'local') : 'dirty';
     next.__saveErr = '';
     next.__deviceId = DEVICE_ID;
   }catch(e){}
+
   statusStore[id] = next;
   saveStatusStore(statusStore);
-  try{ if(REMOTE_API_URL){ remoteWriteStatus(id, next); } }catch(e){}
+  try{ if(!noRemote && REMOTE_API_URL){ remoteWriteStatus(id, next); } }catch(e){}
 }
 
 /* ===============================
@@ -1876,7 +1881,10 @@ async function confirmRemoteStatus(id, localSt, attempts=6, waitMs=1200){
         const r = data.status && data.status[fid];
         if(r){
           const st = fromRemoteStatus(r);
-          if(statusEquivalent(st, localSt)) return { ok:true, serverTime:data.serverTime, version:data.version };
+          if(statusEquivalent(st, localSt)){
+            // restituisci anche updated_at (serve per evitare conflitti alla prossima modifica)
+            return { ok:true, serverTime:data.serverTime, version:data.version, updated_at: (r.updated_at || st.__remoteUpdatedAt || '') };
+          }
         }
       }
     }catch(e){}
@@ -1898,7 +1906,7 @@ async function confirmRemoteRefs(comune, arr, attempts=6, waitMs=1200){
       try{ if(data.version){ __remoteServerVer = String(data.version); } }catch(e){}
         setSyncBadge(true, 'ONLINE');
         const got = canonRefs((data.refs && data.refs[com]) ? data.refs[com] : []);
-        if(got === want) return { ok:true, serverTime:data.serverTime, version:data.version };
+        if(got === want) return { ok:true, serverTime:data.serverTime, version:data.version, updated_at: (data.refs_meta && data.refs_meta[com]) ? data.refs_meta[com] : '' };
       }
     }catch(e){}
   }
@@ -1912,6 +1920,7 @@ function remoteWriteStatus(id, localSt){
   const base = statusStore[fid] || {};
   const payload = toRemoteStatus(fid, localSt || defaultStatus());
   payload.deviceId = DEVICE_ID;
+  payload.clientVersion = CLIENT_VERSION;
   payload.ifMatchUpdatedAt = base.__remoteUpdatedAt || '';
 
   // marca saving subito
@@ -1969,6 +1978,15 @@ function remoteWriteStatus(id, localSt){
       if(res && res.ok){
         return finalize(res);
       }
+
+      // Se il server segnala conflitto, potrebbe essere un "falso negativo" (es. aggiornato_at cambiato
+      // ma i dati sono gia' identici). In quel caso confermiamo via snapshot e chiudiamo come OK.
+      if(res && (String(res.error||'') === 'conflict')){
+        return confirmRemoteStatus(payload.farmacia_id || fid, localSt || defaultStatus(), 3, 400).then((r)=>{
+          if(r && r.ok) return finalize(r);
+          return finalize(res);
+        });
+      }
       // fallback: prova POST + conferma snapshot (utile se il deploy non espone putStatus)
       try{ remotePostFormOnly('status', payload); }catch(e){}
       return confirmRemoteStatus(payload.farmacia_id || fid, localSt || defaultStatus()).then((r)=>{
@@ -2012,6 +2030,7 @@ function remoteWriteRef(comune, refsArr){
   if(!REMOTE_API_URL) return Promise.resolve({ ok:false, error:'no REMOTE_API_URL' });
   const com = String(comune||'').trim();
   const payload = { comune: com, referenti: Array.isArray(refsArr)?refsArr:[], deviceId: DEVICE_ID, ifMatchUpdatedAt: (refRemoteAt && refRemoteAt[com]) ? refRemoteAt[com] : '' };
+  payload.clientVersion = CLIENT_VERSION;
 
   // pending anti-revert
   try{ refPending[com] = Date.now(); saveRefPending(refPending); }catch(e){}
@@ -2651,7 +2670,8 @@ function applyDraftToStore(marker, row, farmaciaId, isComunale, draft){
   next.owners = uniq(normalizeOwners(next.owners));
 // timestamp ultimo aggiornamento (utile anche per export)
   next.updatedAt = new Date().toISOString();
-  setSt(farmaciaId, next);
+  // aggiorna SOLO locale: il salvataggio cloud avviene esplicitamente con "Salva e chiudi"
+  setSt(farmaciaId, next, { noRemote:true });
 
   applyStatusToMarker(marker, farmaciaId, row, isComunale);
   aggiornaHUD();
